# neural-networks-cuda

./: .gitignore  CMakeLists.txt
neural-networks/: CMakeLists.txt  CudaFeedforwardNeuralNetwork.h  TrainSettings.h  cuda-helpers.cu
runner/: CMakeLists.txt  main.cpp  util.cpp
test/: CMakeLists.txt  main.cpp
